Commit with Assertion,screenshot and Listener

--- a/ViewandHire/ExtentReport.html
+++ b/ViewandHire/ExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jan 4, 2023 08:59:16 am</span></a>
+<a href="#"><span class="badge badge-primary">Jan 28, 2023 07:37:17 pm</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">Launching Chrome browser</p>
             <p class="text-sm">
-              <span>8:59:24 am</span> / <span>00:00:00:019</span>
+              <span>7:37:43 pm</span> / <span>00:00:00:011</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Launching Chrome browser</h5>
-<span class='badge badge-success'>01.04.2023 8:59:24 am</span>
-<span class='badge badge-danger'>01.04.2023 8:59:24 am</span>
-<span class='badge badge-default'>00:00:00:019</span>
+<span class='badge badge-success'>01.28.2023 7:37:43 pm</span>
+<span class='badge badge-danger'>01.28.2023 7:37:43 pm</span>
+<span class='badge badge-default'>00:00:00:011</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,7 +104,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>8:59:24 am</td>
+        <td>7:37:43 pm</td>
         <td>
           Chrome browser opened
         </td>
@@ -121,7 +121,7 @@
           <div class="test-detail">
             <p class="name">Navigating to application</p>
             <p class="text-sm">
-              <span>8:59:35 am</span> / <span>00:00:00:001</span>
+              <span>7:37:49 pm</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -130,9 +130,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Navigating to application</h5>
-<span class='badge badge-success'>01.04.2023 8:59:35 am</span>
-<span class='badge badge-danger'>01.04.2023 8:59:35 am</span>
-<span class='badge badge-default'>00:00:00:001</span>
+<span class='badge badge-success'>01.28.2023 7:37:49 pm</span>
+<span class='badge badge-danger'>01.28.2023 7:37:49 pm</span>
+<span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -144,7 +144,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>8:59:35 am</td>
+        <td>7:37:49 pm</td>
         <td>
           Login page opened
         </td>
@@ -161,7 +161,7 @@
           <div class="test-detail">
             <p class="name">Login to the application</p>
             <p class="text-sm">
-              <span>8:59:54 am</span> / <span>00:00:05:666</span>
+              <span>7:38:01 pm</span> / <span>00:00:02:891</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -170,9 +170,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Login to the application</h5>
-<span class='badge badge-success'>01.04.2023 8:59:54 am</span>
-<span class='badge badge-danger'>01.04.2023 8:59:59 am</span>
-<span class='badge badge-default'>00:00:05:666</span>
+<span class='badge badge-success'>01.28.2023 7:38:01 pm</span>
+<span class='badge badge-danger'>01.28.2023 7:38:04 pm</span>
+<span class='badge badge-default'>00:00:02:891</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -184,9 +184,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>8:59:59 am</td>
+        <td>7:38:04 pm</td>
         <td>
-          Login to VnH successfully
+          Loggedin to VnH successfully
         </td>
       </tr>
   </tbody>
@@ -201,7 +201,7 @@
           <div class="test-detail">
             <p class="name">Registeration of job</p>
             <p class="text-sm">
-              <span>8:59:59 am</span> / <span>00:00:16:364</span>
+              <span>7:38:05 pm</span> / <span>00:00:18:610</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -210,9 +210,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Registeration of job</h5>
-<span class='badge badge-success'>01.04.2023 8:59:59 am</span>
-<span class='badge badge-danger'>01.04.2023 9:00:16 am</span>
-<span class='badge badge-default'>00:00:16:364</span>
+<span class='badge badge-success'>01.28.2023 7:38:05 pm</span>
+<span class='badge badge-danger'>01.28.2023 7:38:24 pm</span>
+<span class='badge badge-default'>00:00:18:610</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -224,9 +224,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:00:16 am</td>
+        <td>7:38:24 pm</td>
         <td>
-          job registered successfully
+          job Details registered successfully
         </td>
       </tr>
   </tbody>
@@ -241,7 +241,7 @@
           <div class="test-detail">
             <p class="name">Registertion of candidate</p>
             <p class="text-sm">
-              <span>9:00:50 am</span> / <span>00:00:26:327</span>
+              <span>7:38:33 pm</span> / <span>00:00:58:903</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -250,9 +250,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Registertion of candidate</h5>
-<span class='badge badge-success'>01.04.2023 9:00:50 am</span>
-<span class='badge badge-danger'>01.04.2023 9:01:17 am</span>
-<span class='badge badge-default'>00:00:26:327</span>
+<span class='badge badge-success'>01.28.2023 7:38:33 pm</span>
+<span class='badge badge-danger'>01.28.2023 7:39:32 pm</span>
+<span class='badge badge-default'>00:00:58:903</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -264,30 +264,44 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:00:50 am</td>
+        <td>7:38:33 pm</td>
         <td>
           Registering the candidate details
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:01:12 am</td>
+        <td>7:38:59 pm</td>
         <td>
-          Candidate registered successfully
+          Candidate details registered successfully
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:01:12 am</td>
+        <td>7:39:06 pm</td>
         <td>
           Candidate reume uploaded succesfully
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:01:17 am</td>
+        <td>7:39:11 pm</td>
         <td>
           Candidate photo uploaded succesfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>7:39:25 pm</td>
+        <td>
+          Candidate certificates uploaded succesfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>7:39:32 pm</td>
+        <td>
+          Candidate Registered successfully
         </td>
       </tr>
   </tbody>
@@ -302,7 +316,7 @@
           <div class="test-detail">
             <p class="name">Scheduling the interview</p>
             <p class="text-sm">
-              <span>9:01:26 am</span> / <span>00:00:00:000</span>
+              <span>7:39:32 pm</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -311,8 +325,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Scheduling the interview</h5>
-<span class='badge badge-success'>01.04.2023 9:01:26 am</span>
-<span class='badge badge-danger'>01.04.2023 9:01:26 am</span>
+<span class='badge badge-success'>01.28.2023 7:39:32 pm</span>
+<span class='badge badge-danger'>01.28.2023 7:39:32 pm</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=6</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
@@ -328,7 +342,7 @@
           <div class="test-detail">
             <p class="name">Open the Organization register</p>
             <p class="text-sm">
-              <span>9:01:41 am</span> / <span>00:00:04:538</span>
+              <span>7:39:43 pm</span> / <span>00:00:07:769</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -337,9 +351,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Open the Organization register</h5>
-<span class='badge badge-success'>01.04.2023 9:01:41 am</span>
-<span class='badge badge-danger'>01.04.2023 9:01:46 am</span>
-<span class='badge badge-default'>00:00:04:538</span>
+<span class='badge badge-success'>01.28.2023 7:39:43 pm</span>
+<span class='badge badge-danger'>01.28.2023 7:39:50 pm</span>
+<span class='badge badge-default'>00:00:07:769</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=7</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -351,7 +365,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:01:46 am</td>
+        <td>7:39:50 pm</td>
         <td>
           Organization registered succesfully
         </td>
@@ -368,7 +382,7 @@
           <div class="test-detail">
             <p class="name">Open the Job category register</p>
             <p class="text-sm">
-              <span>9:01:48 am</span> / <span>00:00:03:418</span>
+              <span>7:39:52 pm</span> / <span>00:00:04:503</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -377,9 +391,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Open the Job category register</h5>
-<span class='badge badge-success'>01.04.2023 9:01:48 am</span>
-<span class='badge badge-danger'>01.04.2023 9:01:51 am</span>
-<span class='badge badge-default'>00:00:03:418</span>
+<span class='badge badge-success'>01.28.2023 7:39:52 pm</span>
+<span class='badge badge-danger'>01.28.2023 7:39:57 pm</span>
+<span class='badge badge-default'>00:00:04:503</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=8</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -391,7 +405,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:01:51 am</td>
+        <td>7:39:57 pm</td>
         <td>
           Job category registered succesfully
         </td>
@@ -408,7 +422,7 @@
           <div class="test-detail">
             <p class="name">Open the Skill register</p>
             <p class="text-sm">
-              <span>9:01:53 am</span> / <span>00:00:02:850</span>
+              <span>7:39:59 pm</span> / <span>00:00:06:441</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -417,9 +431,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Open the Skill register</h5>
-<span class='badge badge-success'>01.04.2023 9:01:53 am</span>
-<span class='badge badge-danger'>01.04.2023 9:01:56 am</span>
-<span class='badge badge-default'>00:00:02:850</span>
+<span class='badge badge-success'>01.28.2023 7:39:59 pm</span>
+<span class='badge badge-danger'>01.28.2023 7:40:05 pm</span>
+<span class='badge badge-default'>00:00:06:441</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=9</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -431,9 +445,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:01:56 am</td>
+        <td>7:40:05 pm</td>
         <td>
-          Major and minor Skills registered succesfully
+          Major and Sub skills registered succesfully
         </td>
       </tr>
   </tbody>
@@ -448,7 +462,7 @@
           <div class="test-detail">
             <p class="name">Open the Questions register</p>
             <p class="text-sm">
-              <span>9:01:58 am</span> / <span>00:00:06:785</span>
+              <span>7:40:07 pm</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -457,29 +471,15 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Open the Questions register</h5>
-<span class='badge badge-success'>01.04.2023 9:01:58 am</span>
-<span class='badge badge-danger'>01.04.2023 9:02:05 am</span>
-<span class='badge badge-default'>00:00:06:785</span>
+<span class='badge badge-success'>01.28.2023 7:40:07 pm</span>
+<span class='badge badge-danger'>01.28.2023 7:40:07 pm</span>
+<span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=10</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
 </div>
-</div><div class="detail-body mt-4">
-<table class="table table-sm">
-  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
-  <tbody>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:02:05 am</td>
-        <td>
-          Questions & questions set registered succesfully
-        </td>
-      </tr>
-  </tbody>
-</table>
-</div>
-          </div>
+</div>          </div>
         </li>
         <li class="test-item"  status="pass" test-id="11"
           author=""
@@ -488,7 +488,7 @@
           <div class="test-detail">
             <p class="name">Open the User register</p>
             <p class="text-sm">
-              <span>9:02:07 am</span> / <span>00:00:04:287</span>
+              <span>7:40:17 pm</span> / <span>00:00:07:599</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -497,9 +497,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Open the User register</h5>
-<span class='badge badge-success'>01.04.2023 9:02:07 am</span>
-<span class='badge badge-danger'>01.04.2023 9:02:11 am</span>
-<span class='badge badge-default'>00:00:04:287</span>
+<span class='badge badge-success'>01.28.2023 7:40:17 pm</span>
+<span class='badge badge-danger'>01.28.2023 7:40:25 pm</span>
+<span class='badge badge-default'>00:00:07:599</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=11</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -511,9 +511,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:02:11 am</td>
+        <td>7:40:25 pm</td>
         <td>
-          User created successfully
+          User registered succesfully
         </td>
       </tr>
   </tbody>
@@ -535,13 +535,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jan 4, 2023 08:59:16 am</h3>
+<h3>Jan 28, 2023 07:37:17 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jan 4, 2023 09:02:11 am</h3>
+<h3>Jan 28, 2023 07:40:27 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -592,7 +592,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>13</b> events passed</small></div>
+<div><small data-tooltip='100%'><b>14</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
 <b data-tooltip='%'>0</b> others
@@ -611,7 +611,7 @@
 </div></div>
 <script>
 var timeline = {
-"Launching Chrome browser":0.019,"Navigating to application":0.001,"Login to the application":5.666,"Registeration of job":16.364,"Registertion of candidate":26.327,"Scheduling the interview":0,"Open the Organization register":4.538,"Open the Job category register":3.418,"Open the Skill register":2.85,"Open the Questions register":6.785,"Open the User register":4.287
+"Launching Chrome browser":0.011,"Navigating to application":0,"Login to the application":2.891,"Registeration of job":18.61,"Registertion of candidate":58.903,"Scheduling the interview":0,"Open the Organization register":7.769,"Open the Job category register":4.503,"Open the Skill register":6.441,"Open the Questions register":0,"Open the User register":7.599
 };
 </script>
 <div class="row">
@@ -637,7 +637,7 @@ warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
-passEvents: 13,
+passEvents: 14,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
