--- a/ViewandHire/test-output/old/ViewandHireProject/methods.html
+++ b/ViewandHire/test-output/old/ViewandHireProject/methods.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>ViewandHireProject</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fc868b">  <td>23/01/04 08:59:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_tc.loginPage()[pri:0, instance:testCase.Login_tc@5d0bf09b]">loginPage</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="e4659c">  <td>23/01/04 08:59:59</td>   <td>5833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="job_tc.registerjob()[pri:0, instance:testCase.job_tc@53045c6c]">registerjob</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="8d708a">  <td>23/01/04 09:00:50</td>   <td>56610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Candidate_tc.registercandidate()[pri:0, instance:testCase.Candidate_tc@53fb3dab]">registercandidate</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="8ff096">  <td>23/01/04 09:01:26</td>   <td>92352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Schedule_tc.scheduleinterview()[pri:0, instance:testCase.Schedule_tc@350aac89]">scheduleinterview</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="e495ff">  <td>23/01/04 08:59:16</td>   <td>-37687</td> <td title="&gt;&gt;CommonFunctions.launchBrowser()[pri:0, instance:testCase.Setting_tc@2d901eb0]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="e495ff">  <td>23/01/04 09:02:11</td>   <td>137727</td> <td title="&lt;&lt;CommonFunctions.tearDown()[pri:0, instance:testCase.Setting_tc@2d901eb0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="60d6e9">  <td>23/01/04 09:01:58</td>   <td>124605</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.QuestionsBank()[pri:4, instance:testCase.Setting_tc@2d901eb0]">QuestionsBank</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="60d6e9">  <td>23/01/04 09:02:07</td>   <td>133400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.Users()[pri:5, instance:testCase.Setting_tc@2d901eb0]">Users</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="60d6e9">  <td>23/01/04 09:01:48</td>   <td>114321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.JobCategoryRegister()[pri:2, instance:testCase.Setting_tc@2d901eb0]">JobCategoryRegister</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="60d6e9">  <td>23/01/04 09:01:41</td>   <td>107769</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.OrganizationRegister()[pri:1, instance:testCase.Setting_tc@2d901eb0]">OrganizationRegister</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="60d6e9">  <td>23/01/04 09:01:53</td>   <td>119748</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.Skills()[pri:3, instance:testCase.Setting_tc@2d901eb0]">Skills</td> 
-  <td>main@899543194</td>   <td></td> </tr>
+<tr bgcolor="a6a26d">  <td>23/01/28 21:29:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_tc.loginPage()[pri:1, instance:testCase.Login_tc@793f29ff]">loginPage</td> 
+  <td>main@426960147</td>   <td></td> </tr>
+<tr bgcolor="b569d9">  <td>23/01/28 21:29:39</td>   <td>71</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="job_tc.registerjob()[pri:0, instance:testCase.job_tc@5149d738]">registerjob</td> 
+  <td>main@426960147</td>   <td></td> </tr>
+<tr bgcolor="619c76">  <td>23/01/28 21:29:39</td>   <td>137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Candidate_tc.registercandidate()[pri:0, instance:testCase.Candidate_tc@cb0755b]">registercandidate</td> 
+  <td>main@426960147</td>   <td></td> </tr>
+<tr bgcolor="a37671">  <td>23/01/28 21:29:39</td>   <td>183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Schedule_tc.scheduleinterview()[pri:0, instance:testCase.Schedule_tc@196a42c3]">scheduleinterview</td> 
+  <td>main@426960147</td>   <td></td> </tr>
+<tr bgcolor="b08ed1">  <td>23/01/28 21:29:39</td>   <td>483</td> <td title="&lt;&lt;CommonFunctions.tearDown()[pri:0, instance:testCase.Setting_tc@8458f04]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="907eb0">  <td>23/01/28 21:29:39</td>   <td>311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.JobCategoryRegister()[pri:2, instance:testCase.Setting_tc@8458f04]">JobCategoryRegister</td> 
+  <td>main@426960147</td>   <td></td> </tr>
+<tr bgcolor="907eb0">  <td>23/01/28 21:29:39</td>   <td>348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.QuestionsBank()[pri:4, instance:testCase.Setting_tc@8458f04]">QuestionsBank</td> 
+  <td>main@426960147</td>   <td></td> </tr>
+<tr bgcolor="907eb0">  <td>23/01/28 21:29:39</td>   <td>318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.Skills()[pri:3, instance:testCase.Setting_tc@8458f04]">Skills</td> 
+  <td>main@426960147</td>   <td></td> </tr>
+<tr bgcolor="907eb0">  <td>23/01/28 21:29:39</td>   <td>360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.Users()[pri:5, instance:testCase.Setting_tc@8458f04]">Users</td> 
+  <td>main@426960147</td>   <td></td> </tr>
+<tr bgcolor="907eb0">  <td>23/01/28 21:29:39</td>   <td>232</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Setting_tc.OrganizationRegister()[pri:1, instance:testCase.Setting_tc@8458f04]">OrganizationRegister</td> 
+  <td>main@426960147</td>   <td></td> </tr>
+<tr bgcolor="b08ed1">  <td>23/01/28 21:26:28</td>   <td>-190834</td> <td title="&gt;&gt;CommonFunctions.launchBrowser()[pri:0, instance:testCase.Setting_tc@8458f04]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@426960147</td>   <td></td> </tr>
 </table>
