--- a/ViewandHire/test-output/old/Default suite/methods.html
+++ b/ViewandHire/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="76738a">  <td>22/12/04 19:51:39</td>   <td>0</td> <td title="&gt;&gt;CommonFunctions.launchBrowser()[pri:0, instance:testCase.Candidate_tc@3c77d488]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
-<tr bgcolor="76738a">  <td>22/12/04 19:53:16</td>   <td>96974</td> <td title="&lt;&lt;CommonFunctions.tearDown()[pri:0, instance:testCase.Candidate_tc@3c77d488]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
-<tr bgcolor="caa560">  <td>22/12/04 19:52:41</td>   <td>61957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Candidate_tc.registercandidate()[pri:0, instance:testCase.Candidate_tc@3c77d488]">registercandidate</td> 
+<tr bgcolor="caa560">  <td>23/01/28 18:12:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_tc.loginPage()[pri:1, instance:testCase.Login_tc@3c77d488]">loginPage</td> 
   <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="76738a">  <td>23/01/28 18:12:07</td>   <td>-24300</td> <td title="&gt;&gt;CommonFunctions.launchBrowser()[pri:0, instance:testCase.Login_tc@3c77d488]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
+<tr bgcolor="76738a">  <td>23/01/28 18:12:35</td>   <td>4274</td> <td title="&lt;&lt;CommonFunctions.tearDown()[pri:0, instance:testCase.Login_tc@3c77d488]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@91912419</td>   <td></td> </tr>
 </table>
