--- a/ViewandHire/test-output/old/ViewandHireProject/toc.html
+++ b/ViewandHire/test-output/old/ViewandHireProject/toc.html
@@ -22,48 +22,48 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Candidate register validation (0/1/0)</td><td valign='top' align='right'>
-  <a href='Candidate register validation.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Interview schedule validation (0/1/0)</td><td valign='top' align='right'>
-  <a href='Interview schedule validation.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
 <table style='width: 100%'><tr><td valign='top'>ViewandHireTest (0/0/0)</td><td valign='top' align='right'>
   <a href='ViewandHireTest.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-skipped'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>job register validation (0/1/0)</td><td valign='top' align='right'>
-  <a href='job register validation.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Candidate register validation (0/0/1)</td><td valign='top' align='right'>
+  <a href='Candidate register validation.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-skipped'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Login page validation (1/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Interview schedule validation (0/0/1)</td><td valign='top' align='right'>
+  <a href='Interview schedule validation.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-skipped'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Login page validation (0/0/1)</td><td valign='top' align='right'>
   <a href='Login page validation.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-skipped'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Setting section validation (5/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Setting section validation (0/0/5)</td><td valign='top' align='right'>
   <a href='Setting section validation.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-skipped'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>job register validation (0/0/1)</td><td valign='top' align='right'>
+  <a href='job register validation.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
